--- a/css/styles.css
+++ b/css/styles.css
@@ -103,7 +103,7 @@
 	padding: 0;
 }
 
-.no-left-padding{
+.no-left-padding {
 	padding-left: 0;
 }
 
@@ -118,4 +118,8 @@
 .portfolio-blog-card-strip-bg {
 	min-height: 300px;
 	background: url(../img/512x512.png) center / cover;
+}
+
+.left-sidebar {
+	background-color: #37474f;
 }
