--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,6 @@
 
 .portfolio-header {
 	position: relative;
-	/*background-image: url(images/header-bg.jpg);*/
 }
 
 .portfolio-header .mdl-layout__header-row {
@@ -122,4 +121,32 @@
 
 .left-sidebar {
 	background-color: #37474f;
+}
+
+.left-sidebar-div {
+	padding: 40px 30px;
+}
+
+.left-sidebar-image-bg {
+	background-color: #263238;
+}
+
+.left-sidebar-image {
+	width: 100%;
+}
+
+.left-sidebar-name {
+	display:block;
+	width: 100%;
+	text-align: center;
+	font-size: 20px;
+}
+
+.left-sidebar-title {
+	display:block;
+	width: 100%;
+	text-align: center;
+	font-weight: 300;
+	font-size: 14px;
+	padding-top: 5px;
 }
