--- a/css/styles.css
+++ b/css/styles.css
@@ -140,6 +140,7 @@
 	width: 100%;
 	text-align: center;
 	font-size: 20px;
+	text-transform: uppercase;
 }
 
 .left-sidebar-title {
@@ -149,4 +150,81 @@
 	font-weight: 300;
 	font-size: 14px;
 	padding-top: 5px;
+}
+
+.left-title-div-big {
+	height: 40px;
+}
+
+.round-btn-left-big {
+	width: 40px;
+	height: 40px;
+	border-radius: 20px;
+	text-align: center;
+	line-height: 40px;
+}
+
+.left-title {
+	height: 40px;
+	display: inline-block;
+	vertical-align: middle;
+	text-transform: uppercase;
+	font-size: 16px;
+	padding-left: 10px;
+	word-break: break-word;
+}
+
+.left-data {
+	padding-top: 5px;
+	padding-bottom: 30px;
+}
+
+.left-data span {
+	font-size: 14px;
+	font-weight: 300;
+}
+
+.contact-item {
+	display: block;
+	min-height: 25px;
+}
+
+.left-data .contact-item:not(:first-child) {
+    padding-top: 10px;
+}
+
+.round-btn-left-small {
+	width: 25px;
+	height: 25px;
+	border-radius: 12.5px;
+	text-align: center;
+	vertical-align: middle;
+	line-height: 25px;
+	background-color: #ffffff;
+	color: #37474f;
+	font-size: 20px;
+	margin-left: 7px;
+	float: left;
+}
+
+.left-data-text {
+	font-size: 14px;
+	font-weight: 300;
+	vertical-align: middle;
+	padding-left: 10px;
+	margin-left: 42px;
+	word-break: break-word;
+}
+
+.icon-contact {
+	width: 30px;
+	height: 30px;
+	border-radius: 15px;
+	line-height: 30px;
+	color: #ffffff;
+	background-color: #37474f;
+}
+
+.text-contact {
+	line-height: 2;
 }
