--- a/css/styles.css
+++ b/css/styles.css
@@ -205,6 +205,7 @@
 	font-size: 20px;
 	margin-left: 7px;
 	float: left;
+	position: relative;
 }
 
 .left-data-text {
@@ -227,4 +228,29 @@
 
 .text-contact {
 	line-height: 2;
+}
+
+.progress {
+	height: 10px;
+	border-radius: 10px;
+}
+
+.progress-outer {
+	width: 100%;
+	background-color: #ffffff;
+	margin-top: 5px;
+}
+
+.progress-inner {
+	background-color: #263238;
+}
+
+.round-btn-left-small img {
+	width: 20px;
+	height: 20px;
+	position: absolute;
+	left: 50%;
+	top: 50%; 
+	margin-left: -10px;
+	margin-top: -10px;
 }
