--- a/css/styles.css
+++ b/css/styles.css
@@ -175,7 +175,7 @@
 }
 
 .left-data {
-	padding-top: 5px;
+	padding-top: 10px;
 	padding-bottom: 30px;
 }
 
@@ -212,7 +212,6 @@
 	font-size: 14px;
 	font-weight: 300;
 	vertical-align: middle;
-	padding-left: 10px;
 	margin-left: 42px;
 	word-break: break-word;
 }
@@ -253,4 +252,69 @@
 	top: 50%; 
 	margin-left: -10px;
 	margin-top: -10px;
+}
+
+.right-title-big-container {
+	min-height: 50px;
+}
+
+.round-btn-right {
+	width: 50px;
+	height: 50px;
+	border-radius: 25px;
+	text-align: center;
+	vertical-align: middle;
+	line-height: 50px;
+	background-color: #263238;
+	font-size: 25px;
+	margin-left: 20px;
+	float: left;
+	position: relative;
+}
+
+.right-title-big {
+	font-size: 30px;
+	color: #263238;
+	text-transform: uppercase;
+	font-weight: bold;
+	vertical-align: middle;
+	line-height: 1.5;
+	margin-left: 90px;
+}
+
+.right-content {
+	padding-left: 90px;
+	padding-top: 20px;
+	padding-bottom: 50px;
+}
+
+.right-title-small {
+	font-size: 25px;
+	color: #263238;
+	text-transform: uppercase;
+	line-height: 1.2;
+}
+
+.place {
+	color: #90a4ae;
+}
+
+.right-place-icons {
+	float: left;
+}
+
+.right-place-text {
+	line-height: 1.9;
+	font-size: 13px;
+	font-weight: 300;
+}
+
+.right-details {
+	padding-bottom: 30px;
+}
+
+.right-details p {
+	padding: 0;
+	margin: 0;
+	font-size: 15px;
 }
