--- a/css/styles.css
+++ b/css/styles.css
@@ -116,7 +116,10 @@
 
 .portfolio-blog-card-strip-bg {
 	min-height: 300px;
-	background: url(../img/512x512.png) center / cover;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: contain;
+	background-image: url(../img/512x512.png);
 }
 
 .left-sidebar {
@@ -362,4 +365,12 @@
 
 .left-data-text a:hover { 
     color: #263238;
+}
+
+.app-title {
+	text-shadow:
+		-1px -1px 0 #000,
+		1px -1px 0 #000,
+		-1px 1px 0 #000,
+		1px 1px 0 #000;
 }
