--- a/css/styles.css
+++ b/css/styles.css
@@ -247,13 +247,13 @@
 }
 
 .round-btn-left-small img {
-	width: 20px;
-	height: 20px;
+	width: 18px;
+	height: 18px;
 	position: absolute;
 	left: 50%;
 	top: 50%; 
-	margin-left: -10px;
-	margin-top: -10px;
+	margin-left: -9px;
+	margin-top: -9px;
 }
 
 .right-side {
@@ -354,15 +354,15 @@
 	color: #37474f;
 }
 
-.left-data-text a, .source-code {
+.left-data-text a {
 	color: #37474f;
 }
 
-.left-data-text a:visited, .source-code:visited { 
+.left-data-text a:visited{ 
 	color: #37474f;
 }
 
-.left-data-text a:hover, .source-code:hover { 
+.left-data-text a:hover { 
     color: #263238;
 }
 
@@ -391,8 +391,4 @@
 	top: 50%; 
 	margin-left: -13px;
 	margin-top: -14px;
-}
-
-.source-code {
-	display: none;
 }
