--- a/css/styles.css
+++ b/css/styles.css
@@ -1,194 +1,194 @@
 * {
-	font-family: 'Roboto Slab', serif !important;
+    font-family: 'Roboto Slab', serif !important;
 }
 
 .material-icons {
-	font-family: 'Material Icons', serif !important;
+    font-family: 'Material Icons', serif !important;
 }
 
 .portfolio-header {
-	position: relative;
+    position: relative;
 }
 
 .portfolio-header .mdl-layout__header-row {
-	padding: 0;
-	-webkit-justify-content: center;
-	-ms-flex-pack: center;
-	justify-content: center;
+    padding: 0;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
 }
 
 .mdl-layout__title {
-	font-size: 14px;
-	text-align: center;
-	font-weight: 300;
+    font-size: 14px;
+    text-align: center;
+    font-weight: 300;
 }
 
 .is-compact .mdl-layout__title span {
-	display: none;
+    display: none;
 }
 
 .portfolio-logo-row {
-	min-height: 200px;
+    min-height: 200px;
 }
 
 .is-compact .portfolio-logo-row {
-	min-height: auto;
+    min-height: auto;
 }
 
 .portfolio-logo {
-	background: url(../img/logo.png) 50% no-repeat;
-	background-size: cover;
-	height: 150px;
-	width: 150px;
-	margin: auto auto 10px;
+    background: url(../img/logo.png) 50% no-repeat;
+    background-size: cover;
+    height: 150px;
+    width: 150px;
+    margin: auto auto 10px;
 }
 
 .is-compact .portfolio-logo {
-	height: 50px;
-	width: 50px;
-	margin-top: 7px;
+    height: 50px;
+    width: 50px;
+    margin-top: 7px;
 }
 
 .portfolio-navigation-row {
-	background-color: rgba(0, 0, 0, 0.08);
-	text-transform: uppercase;
-	height: 45px;
+    background-color: rgba(0, 0, 0, 0.08);
+    text-transform: uppercase;
+    height: 45px;
 }
 
-.portfolio-navigation-row  .mdl-navigation {
-	text-align: center;
-	max-width: 900px;
-	width: 100%;
+.portfolio-navigation-row .mdl-navigation {
+    text-align: center;
+    max-width: 900px;
+    width: 100%;
 }
 
 .portfolio-navigation-row .mdl-navigation__link {
-	-webkit-flex: 1;
-	-ms-flex: 1;
-	flex: 1;
-	line-height: 42px;
+    -webkit-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+    line-height: 42px;
 }
 
 .portfolio-header .mdl-layout__drawer-button {
-	background-color: rgba(197, 197, 197, 0.44);
+    background-color: rgba(197, 197, 197, 0.44);
 }
 
 .portfolio-navigation-row .is-active {
-	position: relative;
-	font-weight: bold;
+    position: relative;
+    font-weight: bold;
 }
 
 .portfolio-navigation-row .is-active:after {
-	content: "";
-	width: 70%;
-	height: 2px;
-	display: block;
-	position: absolute;
-	bottom: 0;
-	background-color: rgb(255,255,255);
-	left: 15%;
+    content: "";
+    width: 70%;
+    height: 2px;
+    display: block;
+    position: absolute;
+    bottom: 0;
+    background-color: rgb(255, 255, 255);
+    left: 15%;
 }
 
 .portfolio-max-width {
-	max-width: 900px;
-	margin: auto;
+    max-width: 900px;
+    margin: auto;
 }
 
 .portfolio-copy {
-	max-width: 700px;
+    max-width: 700px;
 }
 
 .no-padding {
-	padding: 0;
+    padding: 0;
 }
 
 .no-left-padding {
-	padding-left: 0;
+    padding-left: 0;
 }
 
 .no-bottom-padding {
-	padding-bottom: 0;
+    padding-bottom: 0;
 }
 
 .padding-top {
-	padding: 10px 0 0;
+    padding: 10px 0 0;
 }
 
 .portfolio-blog-card-strip-bg {
-	min-height: 300px;
-	background-repeat: no-repeat;
-	background-position: center;
-	background-size: contain;
+    min-height: 300px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
 }
 
 .left-sidebar {
-	background-color: #37474f;
+    background-color: #37474f;
 }
 
 .left-sidebar-div {
-	padding: 40px 30px;
+    padding: 40px 30px;
 }
 
 .left-sidebar-image-bg {
-	background-color: #263238;
+    background-color: #263238;
 }
 
 .left-sidebar-image {
-	width: 100%;
+    width: 100%;
 }
 
 .left-sidebar-name {
-	display:block;
-	width: 100%;
-	text-align: center;
-	font-size: 20px;
-	text-transform: uppercase;
+    display: block;
+    width: 100%;
+    text-align: center;
+    font-size: 20px;
+    text-transform: uppercase;
 }
 
 .left-sidebar-title {
-	display:block;
-	width: 100%;
-	text-align: center;
-	font-weight: 300;
-	font-size: 14px;
-	padding-top: 5px;
+    display: block;
+    width: 100%;
+    text-align: center;
+    font-weight: 300;
+    font-size: 14px;
+    padding-top: 5px;
 }
 
 .left-title-div-big {
-	height: 40px;
+    height: 40px;
 }
 
 .round-btn-left-big, .round-btn-details {
-	width: 40px;
-	height: 40px;
-	border-radius: 20px;
-	text-align: center;
-	line-height: 40px;
-	position: relative;
+    width: 40px;
+    height: 40px;
+    border-radius: 20px;
+    text-align: center;
+    line-height: 40px;
+    position: relative;
 }
 
 .left-title {
-	height: 40px;
-	display: inline-block;
-	vertical-align: middle;
-	text-transform: uppercase;
-	font-size: 16px;
-	padding-left: 10px;
-	word-break: break-word;
+    height: 40px;
+    display: inline-block;
+    vertical-align: middle;
+    text-transform: uppercase;
+    font-size: 16px;
+    padding-left: 10px;
+    word-break: break-word;
 }
 
 .left-data {
-	padding-top: 10px;
-	padding-bottom: 30px;
+    padding-top: 10px;
+    padding-bottom: 30px;
 }
 
 .left-data span {
-	font-size: 14px;
-	font-weight: 300;
+    font-size: 14px;
+    font-weight: 300;
 }
 
 .contact-item {
-	display: block;
-	min-height: 25px;
+    display: block;
+    min-height: 25px;
 }
 
 .left-data .contact-item:not(:first-child) {
@@ -196,199 +196,203 @@
 }
 
 .round-btn-left-small {
-	width: 25px;
-	height: 25px;
-	border-radius: 13px;
-	text-align: center;
-	vertical-align: middle;
-	line-height: 25px;
-	background-color: #ffffff;
-	color: #37474f;
-	font-size: 20px;
-	margin-left: 7px;
-	float: left;
-	position: relative;
+    width: 25px;
+    height: 25px;
+    border-radius: 13px;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 25px;
+    background-color: #ffffff;
+    color: #37474f;
+    font-size: 20px;
+    margin-left: 7px;
+    float: left;
+    position: relative;
 }
 
 .left-data-text {
-	font-size: 14px;
-	font-weight: 300;
-	vertical-align: middle;
-	margin-left: 42px;
-	word-break: break-word;
+    font-size: 14px;
+    font-weight: 300;
+    vertical-align: middle;
+    margin-left: 42px;
+    word-break: break-word;
 }
 
 .icon-contact {
-	width: 30px;
-	height: 30px;
-	border-radius: 15px;
-	line-height: 30px;
-	color: #ffffff;
-	background-color: #37474f;
+    width: 30px;
+    height: 30px;
+    border-radius: 15px;
+    line-height: 30px;
+    color: #ffffff;
+    background-color: #37474f;
 }
 
 .text-contact {
-	line-height: 2;
+    line-height: 2;
 }
 
 .progress {
-	height: 10px;
-	border-radius: 10px;
+    height: 10px;
+    border-radius: 10px;
 }
 
 .progress-outer {
-	width: 100%;
-	background-color: #ffffff;
-	margin-top: 5px;
+    width: 100%;
+    background-color: #ffffff;
+    margin-top: 5px;
 }
 
 .progress-inner {
-	background-color: #263238;
+    background-color: #263238;
 }
 
 .round-btn-left-small img {
-	width: 18px;
-	height: 18px;
-	position: absolute;
-	left: 50%;
-	top: 50%; 
-	margin-left: -9px;
-	margin-top: -9px;
+    width: 18px;
+    height: 18px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin-left: -9px;
+    margin-top: -9px;
 }
 
 .right-side {
-	padding: 40px 0;
+    padding: 40px 0;
 }
 
 .right-title-big-container {
-	min-height: 50px;
+    min-height: 50px;
 }
 
 .round-btn-right {
-	width: 50px;
-	height: 50px;
-	border-radius: 25px;
-	text-align: center;
-	vertical-align: middle;
-	line-height: 50px;
-	background-color: #263238;
-	font-size: 25px;
-	margin-left: 20px;
-	float: left;
-	position: relative;
+    width: 50px;
+    height: 50px;
+    border-radius: 25px;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 50px;
+    background-color: #263238;
+    font-size: 25px;
+    margin-left: 20px;
+    float: left;
+    position: relative;
 }
 
 .right-title-big {
-	font-size: 30px;
-	color: #263238;
-	text-transform: uppercase;
-	font-weight: bold;
-	vertical-align: middle;
-	line-height: 1.5;
-	margin-left: 90px;
+    font-size: 30px;
+    color: #263238;
+    text-transform: uppercase;
+    font-weight: bold;
+    vertical-align: middle;
+    line-height: 1.5;
+    margin-left: 90px;
 }
 
 .right-content {
-	padding-left: 90px;
-	padding-top: 20px;
-	padding-bottom: 50px;
+    padding-left: 90px;
+    padding-top: 20px;
+    padding-bottom: 50px;
 }
 
 .right-title-small {
-	font-size: 25px;
-	color: #263238;
-	text-transform: uppercase;
-	line-height: 1.2;
+    font-size: 25px;
+    color: #263238;
+    text-transform: uppercase;
+    line-height: 1.2;
 }
 
 .place {
-	color: #90a4ae;
+    color: #90a4ae;
 }
 
 .right-place-icons {
-	float: left;
+    float: left;
 }
 
 .right-place-text {
-	line-height: 1.9;
-	font-size: 13px;
-	font-weight: 300;
+    line-height: 1.9;
+    font-size: 13px;
+    font-weight: 300;
 }
 
 .right-details {
-	padding-bottom: 30px;
+    padding-bottom: 30px;
 }
 
 .right-details p {
-	padding: 0;
-	margin: 0;
-	font-size: 15px;
+    padding: 0;
+    margin: 0;
+    font-size: 15px;
 }
 
 .lang-div {
-	position: relative;
+    position: relative;
 }
 
 .lang-img {
-	width: 200px;
-	height: 132px;
-	border-radius: 10px;
-	position: relative;
-	left: 50%;
-	margin-left: -100px;
+    width: 200px;
+    height: 132px;
+    border-radius: 10px;
+    position: relative;
+    left: 50%;
+    margin-left: -100px;
 }
 
 .lang-title {
-	font-size: 20px;
-	text-transform: uppercase;
-	text-align: center;
-	padding: 10px 0;
-	color: #37474f;
+    font-size: 20px;
+    text-transform: uppercase;
+    text-align: center;
+    padding: 10px 0;
+    color: #37474f;
 }
 
 .lang-stars {
-	text-align: center;
+    text-align: center;
 }
 
 .lang-stars div {
-	color: #37474f;
+    color: #37474f;
 }
 
 .left-data-text a {
-	color: #37474f;
+    color: #37474f;
 }
 
-.left-data-text a:visited{ 
-	color: #37474f;
+.left-data-text a:visited {
+    color: #37474f;
 }
 
-.left-data-text a:hover { 
+.left-data-text a:hover {
     color: #263238;
 }
 
 .app-title {
-	color: #37474f;
-	margin-bottom: 10px;
+    color: #37474f;
+    margin-bottom: 10px;
 }
 
 .round-btn-details {
-	text-decoration: none;
-	color: #ffffff;
-	vertical-align: middle;
-	margin: 10px;
-	display: none;
+    text-decoration: none;
+    color: #ffffff;
+    vertical-align: middle;
+    margin: 10px;
+    display: none;
 }
 
-.details-icon, .screen {
-	width: 100%;
+.details-icon {
+    width: 100%;
 }
 
 .round-btn-details img {
-	width: 25px;
-	height: 25px;
-	position: absolute;
-	left: 50%;
-	top: 50%; 
-	margin-left: -13px;
-	margin-top: -14px;
+    width: 25px;
+    height: 25px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin-left: -13px;
+    margin-top: -14px;
+}
+
+.screen-container {
+    text-align: center;
 }
